# resumecraft

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic.py  django_view.py  fastapi_app.py  flask_app.py  from_json.py  styled.py
src/resumecraft/: __init__.py  builder.py  cli.py  craft.py  models.py  styles.py  utils.py
tests/: conftest.py  test_builder.py  test_cli.py  test_craft.py  test_models.py  test_utils.py
tests/fixtures/: sample.json
