[project]
name = "resumecraft"
version = "0.4.0"
description = "Generate professional resumes from JSON with DOCX/PDF export, custom styling, and web framework support."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Mohammed Farhan K C", email = "kcfarhan123@gmail.com" }]
keywords = ["resume", "docx", "cv", "career", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Typing :: Typed",
]
dependencies = ["python-docx>=1.1.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
cli = ["typer>=0.12.0"]
pdf = ["docx2pdf>=0.1.8"]
watch = ["watchfiles>=1.0.0"]
all = ["resumecraft[cli,pdf,watch]"]
dev = ["pytest>=8.0.0", "typer>=0.12.0"]

[project.urls]
Homepage = "https://github.com/mdfarhankc/resumecraft"
Repository = "https://github.com/mdfarhankc/resumecraft"
Issues = "https://github.com/mdfarhankc/resumecraft/issues"

[project.scripts]
resumecraft = "resumecraft.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resumecraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
